avoided showing invisible text

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 @font-face {
   font-family: 'Patrick Hand';
   src: local('Patrick Hand'), url("./assets/fonts/PatrickHand-Regular.ttf") format('truetype');
+  font-display: swap;
 }
 
 @font-face {
   font-family: 'Permanent Marker';
   src: local('Permanent Marker'), url("./assets/fonts/PermanentMarker-Regular.ttf") format('truetype');
+  font-display: swap;
 }
 
 body {
